# supernanny

./: .env.local  .gitignore  README.md  README_DEPLOYMENT.md  context.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  ui.md  update-mcp.js  vercel-env.csv  vercel.json
.cursor/: mcp.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js
.next/server/app/: _not-found.js  _not-found.js.nft.json  _not-found.rsc  _not-found_client-reference-manifest.js  about.html  about.rsc  blog.html  blog.rsc  checkout.html  checkout.rsc  contact.html  contact.rsc  index.html  index.rsc  nannies.html  nannies.rsc  page.js  services.html  (+3 more)
mcp-main/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
mcp-main/.github/workflows/: publish.yml
mcp-main/src/mcp_server_appwrite/: __init__.py  __main__.py  server.py  service.py  tool_manager.py
src/app/: head.tsx  layout.tsx  page.tsx
src/components/: CtaSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  ServiceCard.tsx  ServicesSection.tsx  Testimonials.tsx  TrustSignals.tsx
src/styles/: globals.css
supernanny-website/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js
supernanny-website/.next/: app-build-manifest.json  trace
(+235 files in other folders)
