[project]
name = "mcp-server-appwrite"
version = "0.1.4"
description = "MCP (Model Context Protocol) server for Appwrite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appwrite>=9.0.3",
    "docstring-parser>=0.16",
    "mcp[cli]>=1.3.0",
]

[project.scripts]
mcp-server-appwrite = "mcp_server_appwrite.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"